src/test/ui/pattern/bindings-after-at/pat-at-same-name-both.stderr
error[E0415]: identifier `a` is bound more than once in this parameter list
  --> $DIR/pat-at-same-name-both.rs:8:14
   |
LL |     fn f(a @ a @ a: ()) {}
   |              ^ used as parameter more than once

error[E0415]: identifier `a` is bound more than once in this parameter list
  --> $DIR/pat-at-same-name-both.rs:8:18
   |
LL |     fn f(a @ a @ a: ()) {}
   |                  ^ used as parameter more than once

error[E0416]: identifier `a` is bound more than once in the same pattern
  --> $DIR/pat-at-same-name-both.rs:13:20
   |
LL |         Ok(a @ b @ a)
   |                    ^ used in a pattern more than once

error[E0416]: identifier `a` is bound more than once in the same pattern
  --> $DIR/pat-at-same-name-both.rs:15:23
   |
LL |         | Err(a @ b @ a)
   |                       ^ used in a pattern more than once

error[E0416]: identifier `a` is bound more than once in the same pattern
  --> $DIR/pat-at-same-name-both.rs:20:13
   |
LL |     let a @ a @ a = ();
   |             ^ used in a pattern more than once

error[E0416]: identifier `a` is bound more than once in the same pattern
  --> $DIR/pat-at-same-name-both.rs:20:17
   |
LL |     let a @ a @ a = ();
   |                 ^ used in a pattern more than once

error[E0416]: identifier `a` is bound more than once in the same pattern
  --> $DIR/pat-at-same-name-both.rs:23:21
   |
LL |     let ref a @ ref a = ();
   |                     ^ used in a pattern more than once

error[E0416]: identifier `a` is bound more than once in the same pattern
  --> $DIR/pat-at-same-name-both.rs:25:29
   |
LL |     let ref mut a @ ref mut a = ();
   |                             ^ used in a pattern more than once

error[E0416]: identifier `a` is bound more than once in the same pattern
  --> $DIR/pat-at-same-name-both.rs:28:17
   |
LL |     let a @ (Ok(a) | Err(a)) = Ok(());
   |                 ^ used in a pattern more than once

error[E0416]: identifier `a` is bound more than once in the same pattern
  --> $DIR/pat-at-same-name-both.rs:28:26
   |
LL |     let a @ (Ok(a) | Err(a)) = Ok(());
   |                          ^ used in a pattern more than once

error: aborting due to 10 previous errors

Some errors have detailed explanations: E0415, E0416.
For more information about an error, try `rustc --explain E0415`.
